[tool.poetry]
name = "hakunet"
version = "0.1.0"
description = "A simple socket server framework for python."
authors = ["KohakuBlueleaf"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
